# svelte

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: __init__.py  bootstrap.py  database.py  dev_seed.py
backend/app/integrations/: __init__.py  usda.py
backend/app/models/: __init__.py  auth.py  favorites.py  food_logs.py  ingestion.py  meals.py  nutrition.py  profile.py  recipes.py  tracker.py
backend/app/repositories/: __init__.py  memory.py  sqlite.py  (+1 more)
docs/: ARCHITECTURE_ROADMAP.md  BACKEND_PLAN.md  CALCULATION_STRATEGY.md  CAMERA_FOOD_BANK_PLAN.md  DASHBOARD_FOLLOWUPS_2026-03-29.md  DATABASE_PLAN.md  FRONTEND_PLAN.md  ITERATION_NOTES_2026-03-29.md  ORCHESTRATION_GUIDELINES.md  PHASE1_COMPLETION_PLAN.md  PROJECT_SETUP.md
frontend/: .env.example  App.tsx  app.json  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.ts  App.tsx  api.ts  mock-data.ts  styles.css  types.ts
scripts/: dev-backend.sh  dev-frontend.sh
tests/: conftest.py  test_api_auth.py  test_api_food_favorites.py  test_api_food_logs.py  test_api_health.py  test_api_ingestion.py  test_api_meals_recipes.py  test_api_profile_dashboard.py  test_api_profile_goals.py  test_api_profile_onboarding.py  test_api_profile_weights.py  test_api_search_and_vision.py  test_api_tracker.py  test_api_weekly_metrics.py  test_backend_nutrition.py  test_calculation_strategy.py  test_database_layer.py  test_sqlite_repository_normalized.py  test_usda_search.py
(+61 files in other folders)
